add model and init index view

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -11,10 +11,18 @@
 
   {% block content %}
 
-  <h1>About the Cat Collector</h1>
+  <h1>About Meme Museum</h1>
   <hr />
   <p class="page-content">
-    I like long romantic walks down the produce aisle. Also, I am currently job seeking!
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet justo donec enim diam vulputate ut pharetra. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Eu consequat ac felis donec et odio pellentesque diam. Posuere lorem ipsum dolor sit. In est ante in nibh mauris cursus mattis molestie a. Pharetra sit amet aliquam id diam. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Molestie a iaculis at erat pellentesque adipiscing commodo elit.
+    <br>
+    Erat velit scelerisque in dictum. Dolor morbi non arcu risus quis varius quam. Sed odio morbi quis commodo odio. Feugiat in ante metus dictum at tempor commodo ullamcorper. Tellus id interdum velit laoreet id donec. Arcu bibendum at varius vel pharetra vel turpis nunc. Volutpat diam ut venenatis tellus in metus vulputate. Eu consequat ac felis donec et odio pellentesque diam volutpat. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Id volutpat lacus laoreet non curabitur gravida arcu ac. Diam phasellus vestibulum lorem sed risus ultricies tristique. Lorem ipsum dolor sit amet consectetur adipiscing. Tristique senectus et netus et malesuada. Vivamus arcu felis bibendum ut tristique et egestas.
+    <br>
+    Id interdum velit laoreet id donec ultrices. Erat velit scelerisque in dictum non consectetur a erat. Vitae ultricies leo integer malesuada nunc vel risus. Ut enim blandit volutpat maecenas volutpat blandit aliquam. Quam vulputate dignissim suspendisse in est ante. Sed tempus urna et pharetra pharetra massa massa ultricies. Non odio euismod lacinia at quis risus sed. Nisl nunc mi ipsum faucibus. Orci eu lobortis elementum nibh tellus molestie. Et leo duis ut diam quam nulla porttitor. Eu non diam phasellus vestibulum lorem.
+    <br>
+    Id consectetur purus ut faucibus. Urna cursus eget nunc scelerisque viverra mauris in aliquam. Amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Eget dolor morbi non arcu risus. Elementum facilisis leo vel fringilla est ullamcorper eget nulla facilisi. Massa sed elementum tempus egestas sed sed risus pretium quam. Dui sapien eget mi proin sed libero. Sit amet tellus cras adipiscing enim eu turpis egestas pretium. Elementum nibh tellus molestie nunc non blandit massa enim nec. Posuere morbi leo urna molestie at. Turpis egestas integer eget aliquet nibh. Orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. Nisl pretium fusce id velit ut tortor pretium viverra.
+    <br>
+    Ultrices in iaculis nunc sed augue. Quis auctor elit sed vulputate mi sit amet mauris commodo. Hac habitasse platea dictumst quisque sagittis purus. Dictum fusce ut placerat orci nulla pellentesque. Volutpat odio facilisis mauris sit. Nunc lobortis mattis aliquam faucibus purus. Ut eu sem integer vitae justo eget magna fermentum. Orci dapibus ultrices in iaculis nunc sed. Nunc faucibus a pellentesque sit amet porttitor. Id diam vel quam elementum pulvinar etiam non quam lacus. Viverra orci sagittis eu volutpat. Facilisi nullam vehicula ipsum a arcu cursus vitae congue mauris. Habitant morbi tristique senectus et netus. Ac placerat vestibulum lectus mauris ultrices eros in cursus turpis. Donec pretium vulputate sapien nec. Turpis massa tincidunt dui ut ornare. Tortor aliquam nulla facilisi cras fermentum odio eu. Enim praesent elementum facilisis leo vel fringilla est ullamcorper.
   </p>
 
 {% endblock %}
