--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,13 +21,14 @@
       <a href="/">
         <img 
           src=""
-          alt="The Cat Collector Logo"
+          alt="Meme Museum Logo"
         >
       </a>
     </div>
     <nav>
       <ul>
-        <li><a href="/about">About</a></li>
+        <li><a href="{% url 'meme-index' %}">Gallery</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
   </header>
