--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,6 +27,7 @@
     </div>
     <nav>
       <ul>
+        <li><a href="{% url 'meme-create' %}">Create</a></li>
         <li><a href="{% url 'meme-index' %}">Gallery</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
