--- a/main_app/templates/memes/index.html
+++ b/main_app/templates/memes/index.html
@@ -18,13 +18,15 @@
 <section class="card-container">
   {% for meme in memes %}
     <div class="card">
-      <div class="card-content">
-        <div class="card-img-container">
+      <a href="/memes/{{ meme.id }}">
+        <div class="card-content">
+          <div class="card-img-container">
+          </div>
+          <h2 class="card-title">{{ meme.title }}</h2>
+          <img src="{{ meme.image }}" alt="Funny image of a dog meme">
+          <p><small>{{ meme.description }}</small></p>
         </div>
-        <h2 class="card-title">{{ meme.title }}</h2>
-        <img src="{{ meme.image }}" alt="Funny image of a dog meme">
-        <p><small>{{ meme.description }}</small></p>
-      </div>
+      </a>
     </div>
   {% endfor %}
 </section>
