--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,6 +9,10 @@
 
 <section class="logo-container">
   <div class="meme-container">
+    <img
+    class="logo-image" 
+    src="{% static 'images/mememuseum-logo.png' %}" 
+    alt="Meme Museum">
     <p>Enter an image here later</p>
   </div>
 </section>
