--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,8 +20,10 @@
     <div class="header-logo-container">
       <a href="/">
         <img 
-          src=""
+          class="header-logo-container-banner"
+          src="{% static 'images/mememuseum-banner.png' %}"
           alt="Meme Museum Logo"
+          height="75"
         >
       </a>
     </div>
