--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -13,7 +13,7 @@
     class="logo-image" 
     src="{% static 'images/mememuseum-logo.png' %}" 
     alt="Meme Museum">
-    <p>Enter an image here later</p>
+    <p>Meme Museum</p>
   </div>
 </section>
 
