add fly io func

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,6 +29,7 @@
     </div>
     <nav>
       <ul>
+        <li><a href="{% url 'meme-canvas' %}">Canvas</a></li>
         <li><a href="{% url 'meme-create' %}">Create</a></li>
         <li><a href="{% url 'meme-index' %}">Gallery</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
