--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -29,7 +29,7 @@ body {
   align-items: center;
   font-family: 'Yuruka';
   min-height: 100vh;
-  --nav-bg: rgba(104, 197, 248, .7);
+  --nav-bg: rgb(132, 212, 255);
   --nav-bg-ff: rgba(104, 197, 248, .9);
   --borders: rgb(36, 116, 248) solid 2px;
   --text-color: rgb(17, 20, 17);
@@ -40,7 +40,6 @@ body {
   --warn: rgb(255, 102, 0);
   --danger: rgb(220, 20, 30);
   --secondary: rgb(57, 57, 57);
-  --card-box-shadow: 5px 5px 6px -1px #AAA;
   --font-xtreme: 4.2rem;
   --font-xxl: 3.6rem;
   --font-xl: 2.4rem;
