add upload feature to aws

--- a/main_app/templates/main_app/meme_form.html
+++ b/main_app/templates/main_app/meme_form.html
@@ -13,7 +13,7 @@
 {% comment %} 
   Leaving the action empty makes the form post to the same url used to display it
 {% endcomment %}
-<form action="" method="post" class="form-container">
+<form action="" method="post" class="form-container" enctype="multipart/form-data">
   {% comment %} 
     Django requires the following for security purposes
   {% endcomment %}
