--- a/main_app/templates/memes/detail.html
+++ b/main_app/templates/memes/detail.html
@@ -17,7 +17,7 @@
 
 <section>
   <div>
-    <img src="{{ meme.image }}" alt="Image of a funny meme">
+    <img src="https://maze-cat-collector.s3.us-east-2.amazonaws.com/{{ meme.image }}" alt="Image of a funny meme">
   </div>
   <div>
     <h1>{{ meme.description }}</h1>
