--- a/main_app/templates/memes/index.html
+++ b/main_app/templates/memes/index.html
@@ -23,7 +23,7 @@
           <div class="card-img-container">
           </div>
           <h2 class="card-title">{{ meme.title }}</h2>
-          <img src="{{ meme.image }}" alt="Funny image of a dog meme">
+          <img src="https://maze-cat-collector.s3.us-east-2.amazonaws.com/{{ meme.image }}" alt="Funny image of a dog meme">
           <p><small>{{ meme.description }}</small></p>
         </div>
       </a>
