add readme file

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,8 +30,8 @@
     <nav>
       <ul>
         {% if user.is_authenticated %}
-          <li><a href="{% url 'meme-canvas' %}">Canvas</a></li>
-          <li><a href="{% url 'meme-create' %}">Create</a></li>
+          <li><a href="{% url 'meme-canvas' %}">Create</a></li>
+          <li><a href="{% url 'meme-create' %}">Upload</a></li>
           <li><a href="{% url 'meme-index' %}">Gallery</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
           <li><a href="{% url 'logout' %}">Log out</a></li>
