--- a/main_app/templates/canvas.html
+++ b/main_app/templates/canvas.html
@@ -12,7 +12,9 @@
 
 {% block content %}
 
-<section class="card-container">
+
+<section class="card-container" >
+  <h2>Create a new meme!</h2>
   <h1>To create a meme, generate a new dog image and enter the text!</h1>
   
   <!-- section to hold canvas and image  -->
