--- a/main_app/templates/memes/detail.html
+++ b/main_app/templates/memes/detail.html
@@ -14,6 +14,8 @@
 <section class="page-header">
   <h1>{{ meme.title }}</h1>
 </section>
+<section>
+<h2>By {{ meme.user }}</h2></section>
 
 <section>
   <div>
@@ -22,10 +24,13 @@
   <div>
     <h1>{{ meme.description }}</h1>
   </div>
-  <div class="meme-actions">
-    <a href="{% url 'meme-update' meme.id %}" class="btn warn">Edit</a>
-    <a href="{% url 'meme-delete' meme.id %}" class="btn danger">Delete</a>
-  </div>
+
+  {% if user == meme.user %}
+    <div class="meme-actions">
+      <a href="{% url 'meme-update' meme.id %}" class="btn warn">Edit</a>
+      <a href="{% url 'meme-delete' meme.id %}" class="btn danger">Delete</a>
+    </div>
+  {% endif %}
 </section>
 
 {% endblock content %}
