add conditionals and permission check

--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -84,3 +84,8 @@ main > section {
     max-width: 520px;
   }
 }
+
+
+canvas {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
