--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -12,7 +12,7 @@
     <img
     class="logo-image" 
     src="{% static 'images/mememuseum-logo.png' %}" 
-    alt="Meme Museum">
+    alt="Meme Museum"/>
   </div>
 </section>
 
