--- a/main_app/templates/canvas.html
+++ b/main_app/templates/canvas.html
@@ -14,18 +14,20 @@
 
 <section class="card-container" >
   <h2>Create a new meme!</h2>
-  <h1>To create a meme, generate a new dog image and enter the text!</h1>
+  <h1>To create a meme, generate a new dog image and enter text to submit!</h1>
   
   <!-- section to hold canvas and image  -->
   
   <button id="newDoge" class="btn submit">click for new dog!</button>
   <img src="https://media.discordapp.net/attachments/694365499420835841/890258022083993640/40zAUTCs5iAAAAABJRU5ErkJggg.png" alt="source picture of dog" id="shibe">
-  <canvas id="canvas" width="500" height="300">Hello</canvas> 
+  <canvas id="canvas" width="500" height="300"></canvas> 
 
   <!-- buttons to customize, save, etc  -->
   <input id="changeText"></input type="text">
   <br>
   <button id="changeTextButton" class="btn submit">Change Text</button>
+  <br>
+  <button id="downloadImageButton" class="btn submit">Download Image</button>
 </section>
 
 {% endblock content %}
