--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,7 +8,7 @@
   <link
     rel="shortcut icon"
     type="image/png"
-    href=""
+    href="{% static 'images/mememuseum-favicon.png' %}"
   >
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   <title>Meme Museum</title>
